--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,9 +1,22 @@
 <resources>
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="android:textColor">#000000</item>
+        <item name="android:windowIsTranslucent">true</item>
+
+    <item name="android:datePickerDialogTheme">@style/MyDatePickerDialogTheme</item>
+    <item name="android:timePickerDialogTheme">@style/MyDatePickerDialogTheme</item>
+    </style>
+    <style name="SplashScreenTheme" parent="SplashScreen_SplashTheme">
+        <item name="colorPrimaryDark">@color/status_bar_color</item>
     </style>
 
+    
+  <style name="MyDatePickerDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+     <item name="colorPrimary">#0091ff</item>
+     <item name="colorPrimaryDark">#0091ff</item>
+     <item name="colorAccent">#0091ff</item>
+     <item name="android:headerBackground">#0091ff</item>
+  </style>
 </resources>
+
+
